changed to margin to lose weird whitespace issue

--- a/assets/sass/partial/_container.sass
+++ b/assets/sass/partial/_container.sass
@@ -94,7 +94,8 @@
       padding-top: 81px
 
       &:after
-        content: ' »'
+        content: '»'
+        margin-left: 5px
 
     &:hover
       .bg
